--- a/student_network_match.ipynb
+++ b/student_network_match.ipynb
@@ -793,7 +793,7 @@
     "# SETUP GMAIL API\n",
     "# ================\n",
     "SCOPES = [\"https://www.googleapis.com/auth/gmail.send\"]\n",
-    "CLIENT_SECRET_FILE = r\"C:\\Users\\Guill\\Downloads\\client_secret_803122994384-i9niq835sd64kmvm4uft57fe04qq49ff.apps.googleusercontent.com.json\"\n",
+    "CLIENT_SECRET_FILE = ,
     "TOKEN_FILE = \"token.json\"\n",
     "\n",
     "creds = None\n",
