--- a/student_network_match.ipynb
+++ b/student_network_match.ipynb
@@ -793,7 +793,7 @@
     "# SETUP GMAIL API\n",
     "# ================\n",
     "SCOPES = [\"https://www.googleapis.com/auth/gmail.send\"]\n",
-    "CLIENT_SECRET_FILE = ,
+    "CLIENT_SECRET_FILE = \n",
     "TOKEN_FILE = \"token.json\"\n",
     "\n",
     "creds = None\n",
